--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+!.env.example
 
 # vercel
 .vercel
@@ -39,3 +40,23 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Security and sensitive files
+*.key
+*.pem
+*.p8
+*.p12
+*.pfx
+secrets/
+.secrets
+config/local.*
+*.local.json
+
+# Lightning data (contains sensitive information)
+data/lightning-addresses.json
+data/invoices.json
+data/payments.json
+
+# Logs that might contain sensitive information
+logs/
+*.log
