--- a/package.json
+++ b/package.json
@@ -3,25 +3,49 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev --turbopack --port 3000",
+    "build": "ESLINT_NO_DEV_ERRORS=true next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "next lint --fix",
+    "type-check": "tsc --noEmit",
+    "test": "echo \"Tests coming soon\" && exit 0",
+    "clean": "rm -rf .next out dist .turbo",
+    "deploy": "echo \"Deploy script for phoenixd-client\"",
+    "docker:build": "docker build -t phoenixd-client .",
+    "docker:run": "docker run -p 3000:3000 phoenixd-client",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,md}\""
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.8",
+    "@tailwindcss/forms": "^0.5.10",
+    "@types/axios": "^0.9.36",
+    "@types/qrcode": "^1.5.5",
+    "axios": "^1.12.2",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.16",
+    "lucide-react": "^0.544.0",
+    "next": "15.5.3",
+    "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.3"
+    "recharts": "^3.2.1",
+    "tailwind-merge": "^3.3.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
-    "@eslint/eslintrc": "^3"
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
