--- a/.env.example
+++ b/.env.example
@@ -38,12 +38,21 @@ NEXT_PUBLIC_DUMMY_NODE_ID=02ab3c4d5e6f7890123456789abcdef1234567890abcdef1234567
 # You can generate one with: openssl rand -hex 32
 PHOENIXD_WEBHOOK_SECRET=your-webhook-secret-here
 
+# WebSocket authentication secret (optional)
+# Used for WebSocket connections to PhoenixD for real-time updates
+# Can be the same as webhook secret or a separate one
+PHOENIXD_WEBSOCKET_SECRET=your-websocket-secret-here
+
 # -----------------------------------------------------------------------------
 # Network Configuration (Optional)
 # -----------------------------------------------------------------------------
 
-# Bitcoin network: mainnet or testnet
+# Bitcoin network: mainnet, testnet, or regtest
+# - mainnet: Real Bitcoin network (PRODUCTION - real money!)
+# - testnet: Test Bitcoin network (safe for development)
+# - regtest: Local development network
 # Default: testnet (safer for development)
+# WARNING: Only use mainnet when you understand the risks!
 NEXT_PUBLIC_PHOENIX_NETWORK=testnet
 
 # -----------------------------------------------------------------------------
